[gd_scene load_steps=4 format=3 uid="uid://ds6epvdxmspty"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_6bmlu"]
[ext_resource type="Script" path="res://Login.gd" id="1_vtjgy"]
[ext_resource type="Script" path="res://scenes/FindMatch.gd" id="2_eam61"]

[node name="Main" type="Node2D"]
script = ExtResource("1_6bmlu")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 79.0
offset_top = 100.0
offset_right = 297.0
offset_bottom = 280.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReadyScreen" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control/ReadyScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ReadyScreen"]
layout_mode = 0
offset_left = 4.0
offset_top = 12.0
offset_right = 209.0
offset_bottom = 114.0

[node name="FindMatch" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_eam61")

[node name="Panel" type="Panel" parent="Control/FindMatch"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/FindMatch"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Finding Match..."

[node name="Find Match" type="Button" parent="Control/FindMatch"]
layout_mode = 0
offset_left = 29.0
offset_top = 37.0
offset_right = 174.0
offset_bottom = 68.0
text = "Lets Find A Match"

[node name="Button2" type="Button" parent="Control/FindMatch"]
layout_mode = 0
offset_left = 46.0
offset_top = 119.0
offset_right = 121.0
offset_bottom = 146.0

[node name="Login" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vtjgy")

[node name="Panel" type="Panel" parent="Control/Login"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UsernameLabel" type="RichTextLabel" parent="Control/Login"]
layout_mode = 0
offset_left = 9.0
offset_top = 15.0
offset_right = 98.0
offset_bottom = 39.0
text = "Username"

[node name="EmailLabel" type="RichTextLabel" parent="Control/Login"]
layout_mode = 0
offset_left = 9.0
offset_top = 41.0
offset_right = 98.0
offset_bottom = 65.0
text = "Email"

[node name="PasswordLabel" type="RichTextLabel" parent="Control/Login"]
layout_mode = 0
offset_left = 9.0
offset_top = 68.0
offset_right = 98.0
offset_bottom = 92.0
text = "PassWord
"

[node name="UsernameText" type="TextEdit" parent="Control/Login"]
layout_mode = 0
offset_left = 97.0
offset_top = 19.0
offset_right = 205.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 8

[node name="EmailText" type="TextEdit" parent="Control/Login"]
layout_mode = 0
offset_left = 97.0
offset_top = 47.0
offset_right = 205.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 8

[node name="PasswordText" type="TextEdit" parent="Control/Login"]
layout_mode = 0
offset_left = 97.0
offset_top = 72.0
offset_right = 205.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 8

[node name="Register" type="Button" parent="Control/Login"]
layout_mode = 0
offset_left = 14.0
offset_top = 116.0
offset_right = 80.0
offset_bottom = 136.0
text = "Register"

[node name="Login" type="Button" parent="Control/Login"]
layout_mode = 0
offset_left = 124.0
offset_top = 116.0
offset_right = 190.0
offset_bottom = 136.0
text = "Login"

[connection signal="pressed" from="Control/FindMatch/Find Match" to="Control/FindMatch" method="_on_find_match_pressed"]
[connection signal="pressed" from="Control/Login/Register" to="Control/Login" method="_on_register_pressed"]
[connection signal="pressed" from="Control/Login/Login" to="Control/Login" method="_on_login_pressed"]
